@@ -2177,6 +2177,29 @@ class ezcGraphRenderer2dTest extends ezcGraphTestCase
         );
     }
 
+    public function testShortAxis()
+    {
+        $filename = $this->tempDir . __FUNCTION__ . '.svg';
+        
+        $graph = new ezcGraphLineChart();
+        $graph->palette = new ezcGraphPaletteBlack();
+        $graph->legend->position = ezcGraph::BOTTOM;
+
+        $graph->data['sample'] = new ezcGraphArrayDataSet(
+            array( 1, 4, 6, 8, 2 )
+        );
+
+        $graph->renderer->options->axisEndStyle = ezcGraph::NO_SYMBOL;
+        $graph->renderer->options->shortAxis    = true;
+
+        $graph->render( 560, 250, $filename );
+
+        $this->compare(
+            $filename,
+            $this->basePath . 'compare/' . __CLASS__ . '_' . __FUNCTION__ . '.svg'
+        );
+    }
+
     public function testRendererOptionsPropertyMaxLabelHeight()
     {
         $options = new ezcGraphRendererOptions();
@@ -2870,7 +2893,7 @@ class ezcGraphRenderer2dTest extends ezcGraphTestCase
     {
         $options = new ezcGraphRenderer2dOptions();
 
-        $this->assertEquals(
+        $this->assertSame(
             ezcGraph::ARROW,
             $options->axisEndStyle,
             'Wrong default value for property axisEndStyle in class ezcGraphRenderer2dOptions'
@@ -2886,6 +2909,32 @@ class ezcGraphRenderer2dTest extends ezcGraphTestCase
         try
         {
             $options->axisEndStyle = false;
+            $this->fail( 'Expected ezcBaseValueException.' );
+        }
+        catch ( ezcBaseValueException $e )
+        { /* Expected */ }
+    }
+
+    public function testRendererOptionsPropertyShortAxis()
+    {
+        $options = new ezcGraphRenderer2dOptions();
+
+        $this->assertSame(
+            false,
+            $options->shortAxis,
+            'Wrong default value for property shortAxis in class ezcGraphRenderer2dOptions'
+        );
+
+        $options->shortAxis = true;
+        $this->assertSame(
+            true,
+            $options->shortAxis,
+            'Setting property value did not work for property shortAxis in class ezcGraphRenderer2dOptions'
+        );
+
+        try
+        {
+            $options->shortAxis = 'true';
             $this->fail( 'Expected ezcBaseValueException.' );
         }
         catch ( ezcBaseValueException $e )
